# Trellis-Gui

./: .gitignore  LICENSE  README.md  conftest.py  demo.csv  dpg_grid.py  dpg_grid_hybrid.py  dpg_grid_inplace.py  grid_model.py  pyproject.toml  requirements.txt  start.cmd  test_dpg_headless.py  test_grid_model.py  test_hybrid_headless.py  test_inplace_headless.py
